<?xml version="1.0" encoding="utf-8"?>
<!-- 3.0.0 -->
<resources>

    <!-- Common -->
    <string name="app_name">Nav Launcher</string>
    <string name="url">http://www.navlauncher.com</string>
    <!-- NavLauncher -->
    <string name="selectContact">Contacts</string>
    <string name="favorites">Favourites</string>
    <string name="history">History</string>
    <string name="voiceType">Voice Type</string>
    <string name="navigate">Navigate</string>
    <!-- About -->
    <string name="about">About</string>
    <string name="aboutText">Nav Launcher version [VERSION]</string>
    <string name="copyright">Copyright 2009&#8211;2015 Scott Kennedy</string>
    <string name="googleCopyright">Google Maps and Google Maps Navigation Copyright 2015 Google</string>
    <string name="translationCredits">English translation by Scott Kennedy</string>
    <!-- InstallNav -->
    <string name="installNav">Install Google Maps Navigation</string>
    <string name="installInfo">You do not have Google Maps Navigation installed.  Nav Launcher requires Google Maps Navigation.  Would you like to go to the Market to download Google Maps?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- Favorites -->
    <string name="addFavorite">Add Favourite</string>
    <string name="addQuickFavorite">Add Quick Favourite</string>
    <string name="destinationName">Name:</string>
    <string name="destinationAddress">Address:</string>
    <string name="favoritePicture">Picture:</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="remove">Remove</string>
    <string name="enterNameAddress">You must enter a name and address.</string>
    <!-- History -->
    <string name="clear">Clear</string>
    <string name="clearConfirm">Are you sure you want to clear all your history?</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="startupScreen">Startup Screen</string>
    <string name="startupScreenMain">Main</string>
    <string name="replaceCarDock">Replace Car Home</string>
    <string name="save">Save</string>
    <!-- Setting names -->
    <string name="startupScreenSetting">startupScreen</string>
    <string name="replaceCarDockSetting">carDockReplacement</string>
    <string name="savePreference">savePreference</string>

</resources>